package grpc

import (
	"context"
	"fmt"
	"time"

	"fabric/internal/shuttle/config"
)

// Client manages gRPC communication with Weaver
type Client struct {
	config *config.WeaverConfig
}

// New creates a new gRPC client
func New(cfg *config.WeaverConfig) (*Client, error) {
	return &Client{
		config: cfg,
	}, nil
}

// NodeInfo represents node information for registration
type NodeInfo struct {
	ID       string                  `json:"id"`
	Name     string                  `json:"name"`
	Region   string                  `json:"region"`
	Zone     string                  `json:"zone"`
	Labels   map[string]string       `json:"labels"`
	Capacity config.ResourceCapacity `json:"capacity"`
}

// WorkloadSpec represents a workload specification
type WorkloadSpec struct {
	ID        string            `json:"id"`
	Name      string            `json:"name"`
	Namespace string            `json:"namespace"`
	Image     string            `json:"image"`
	Command   []string          `json:"command"`
	Env       []string          `json:"env"`
	Resources *ResourceRequests `json:"resources"`
}

// ResourceRequests represents resource requirements
type ResourceRequests struct {
	CPULimit    string `json:"cpuLimit"`
	MemoryLimit string `json:"memoryLimit"`
	GPULimit    string `json:"gpuLimit"`
}

// WorkloadStatus represents workload status report
type WorkloadStatus struct {
	WorkloadID string    `json:"workloadId"`
	NodeID     string    `json:"nodeId"`
	Status     string    `json:"status"`
	UpdatedAt  time.Time `json:"updatedAt"`
}

// NodeHealth represents node health report
type NodeHealth struct {
	NodeID        string    `json:"nodeId"`
	Status        string    `json:"status"`
	WorkloadCount int       `json:"workloadCount"`
	Timestamp     time.Time `json:"timestamp"`
}

// RegisterNode registers this node with Weaver
func (c *Client) RegisterNode(ctx context.Context, nodeInfo *NodeInfo) error {
	// In a real implementation, this would make a gRPC call to Weaver
	// For now, we'll simulate the registration
	fmt.Printf("Registering node %s with Weaver at %s\n", nodeInfo.ID, c.config.Endpoint)
	return nil
}

// UnregisterNode unregisters this node from Weaver
func (c *Client) UnregisterNode(ctx context.Context, nodeID string) error {
	// In a real implementation, this would make a gRPC call to Weaver
	fmt.Printf("Unregistering node %s from Weaver\n", nodeID)
	return nil
}

// GetAssignedWorkloads retrieves workloads assigned to this node
func (c *Client) GetAssignedWorkloads(ctx context.Context, nodeID string) ([]*WorkloadSpec, error) {
	// In a real implementation, this would make a gRPC call to Weaver
	// For now, return empty list
	return []*WorkloadSpec{}, nil
}

// ReportWorkloadStatus reports workload status to Weaver
func (c *Client) ReportWorkloadStatus(ctx context.Context, status *WorkloadStatus) error {
	// In a real implementation, this would make a gRPC call to Weaver
	fmt.Printf("Reporting workload status: %s = %s\n", status.WorkloadID, status.Status)
	return nil
}

// ReportHealth reports node health to Weaver
func (c *Client) ReportHealth(ctx context.Context, health *NodeHealth) error {
	// In a real implementation, this would make a gRPC call to Weaver
	fmt.Printf("Reporting node health: %s = %s (%d workloads)\n",
		health.NodeID, health.Status, health.WorkloadCount)
	return nil
}
